mushrome: Fix changing display resolution.

This CL ensures that the PlatformWindow size changes appropriately. It
also ensures that a new LocalSurfaceId is allocated for the correct
ServerWindow so that the WM submits CompositorFrames to a new SurfaceId
after it resizes.

Also leave TODOs on a few bugs in SurfaceId handling that are less
critical.

Bug: 730616
Change-Id: If1b55a18d074d7982af9dd51278cddaea87406c3